tests/NormalTests/paczka2/big_fuzzy/67980312.err
Error in line 3: S151 S151 11,1
Error in line 22: S151 S151 66,5
Error in line 25: S151 S631 90,73
Error in line 24: S151 S631 4,2
Error in line 52: ioqw6FF2m S151 30,9
Error in line 76: 3OWy S884 137,6
Error in line 88: ioqw6FF2m S151 39,9
Error in line 98: fhvYuD A915 35,0
Error in line 105: fhvYuD S151 7,1
Error in line 74: 8uua S884 10,2
Error in line 121: 8uua A915 5,7
Error in line 125: 8uua S631 7,1
Error in line 133: fhvYuD S631 52,65
Error in line 131: fhvYuD A915 85,4
Error in line 129: 8uua S151 24,8
Error in line 144: ioqw6FF2m S151 5,3
Error in line 158: fhvYuD S631 69,6
Error in line 170: ioqw6FF2m A915 100,0
Error in line 185: fhvYuD S631 6,0
Error in line 186: ioqw6FF2m S151 92,9
Error in line 197: 8uua S631 89,9
Error in line 195: fhvYuD A915 78,9
Error in line 164: NGGfpGE S631 53,6
Error in line 203: fhvYuD S884 26,0
Error in line 211: v85 S631 97,63
Error in line 208: 3OWy S631 95,7
Error in line 231: ioqw6FF2m S631 35,6
Error in line 238: ioqw6FF2m S884 11,9
Error in line 246: ioqw6FF2m S884 71,5
